# e-Callisto_FITS_Analyzer

./: .gitignore  CODE_REVIEW.md  FITS_Analyzer.spec  LICENSE  README.md  burst_processor.py  callisto_downloader.py  dst_index.py  ecallisto_pytest_bootstrap.py  goes_xrs_gui.py  gui_main.py  icon.icns  install_requirements.py  main.py  matplotlib_widget.py  pytest.ini  settings.py  setup.py  soho_lasco_viewer.py
Web/: .env.example  .gitignore  README.md  docker-compose.yml
Web/backend/: .dockerignore  Dockerfile  pyproject.toml
Web/backend/app/: main.py  schemas.py
Web/backend/app/api/: routes.py
Web/backend/app/core/: config.py  rate_limit.py  sessions.py
Web/backend/app/domain/: __init__.py  analyzer.py  exports.py  fits.py  processing.py  types.py
Web/backend/tests/: test_api.py  test_domain_logic.py
packaging/: e-callisto-fits-analyzer.desktop  e-callisto-fits-analyzer.sh  postinst.sh
src/: __init__.py  version.py
testing/: Arecibo-Observatory_20220302_combined_time.efaproj  INDIA-GAURI_20260218_combined_time.efaproj  demo.efaproj
tests/: conftest.py  helpers_learmonth.py  test_backend_analysis_log.py  test_backend_analysis_session.py  test_backend_annotations.py  test_backend_batch_processing.py  test_backend_bug_report.py  test_backend_burst_processor.py  test_backend_coronagraph.py  test_backend_download_manager.py  test_backend_dst_index.py  test_backend_frequency_axis.py  test_backend_goes_overlay.py  test_backend_helioviewer.py  test_backend_hi_jmap.py  test_backend_hmi_vector_field.py  test_backend_image_measure.py  test_backend_kp_index.py  (+66 more)
(+145 files in other folders)
