[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecallisto-web-backend"
version = "0.1.0"
description = "Standalone web backend for the e-CALLISTO FITS Analyzer"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.20",
    "scipy>=1.15.0",
    "uvicorn>=0.34.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

